<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Techwoods_new</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">ABOUT</string>
    <string name="mcc">MCC</string>
    <string name="mca">MCA</string>
    <string name="techwoods">TECHWOODS</string>
    <string name="events">EVENTS</string>
    <string name="signin">SIGNIN</string>
    <string name="contact">CONTACT_US</string>
    <string name="tw">TECHWOODS(2020-2021)</string>
    <string name="title_activity_signin">Signin</string>
    <string name="welcome">Welcome to techwoods</string>
    <string name="title_activity_mcc">Mcc</string>
    <string name="title_activity_mca">Mca</string>
    <string name="title_activity_techwoods">Techwoods</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_contact">Contact</string>
    <string name="mccc">MADRAS CHRISTIAN COLLEGE</string>
    <string name="college">Please select your college</string>
    <string name="title_activity_register">Register</string>
    <string name="register">REGISTRATION</string>
    <string name="continuee">CONTINUE</string>
    <string name="name">Name</string>
    <string name="id">"ID "</string>
    <string name="col">College</string>
    <string name="mob">Mobile no</string>
    <string name="select">Select the event</string>
    <string name="reg">Register</string>
    <string name="ccc">Event_Coordinator</string>
    <string name="RAJKUMAR">RAJKUMAR</string>
    <string name="MOO">8807461223</string>
    <string name="list">LIST OF EVENTS</string>
    <string name="title_activity_debugging">Debugging</string>
    <string name="Debug">DEBUGGING</string>
    <string name="rules">RULES</string>
    <string name="title_activity_potpouri">Potpouri</string>
    <string name="title_activity_sql">Sql</string>
    <string name="title_activity_presentation">Presentation</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_meme">Meme</string>
    <string name="title_activity_facepainting">Facepainting</string>
    <string name="title_activity_webdesign">Webdesign</string>
    <string name="pot">POT_POURI</string>
    <string name="sql">SQL-QUERY</string>
    <string name="developer">About_Developer</string>
    <string name="title_activity_developer">Developer</string>
    <string name="raj">RAJKUMAR</string>
    <string name="mcaa">II MCA (2018-2021)</string>
    <string name="title_activity_successful_reg">Successful_reg</string>
    <string name="email">EMAIL</string>
    <string name="twemail">Techwoods123@gmail.com</string>
    <string name="website">WEBSITE</string>
    <string name="www">www.mcc.edu.in</string>
    <string name="address">ADDRESS</string>
    <string name="tambaram">TAMBARAM EAST CH - 600059</string>
    <string name="venue">VENUE</string>
    <string name="KCC">KIBBLE COMPUTER CENTRE</string>
    <string name="time">TIME</string>
    <string name="am">10am - 12am</string>
    <string name="news">NEWS</string>
    <string name="date">DATE</string>
    <string name="dat">15/02/2020</string>
    <string name="anderson">All the registered students are requested to assemble in anderson hall</string>
    <string name="tim">8:30 - 9:30am</string>
    <string name="Announcement">Announcement</string>
    <string name="prelims">Prelims</string>
    <string name="finals">Finals</string>
    <string name="pm">1pm - 3pm</string>
    <string name="exam">EXAMINATION GALLERY</string>
    <string name="title_activity_course_selection">Course_selection</string>
    <string name="course">Please select your course</string>
    <string name="cours">course</string>
    <string name="ruless">Students without Id and Bonafide will not be allowed to participate</string>
    <string name="mcccc">Madras Christian College</string>
    <string name="hod">Minnie Mam(HOD)</string>

</resources>
